--- a/EDA/Titanic/Titanic .ipynb
+++ b/EDA/Titanic/Titanic .ipynb
@@ -82,17 +82,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 2,
    "id": "2c975b46",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['anagrams',\n",
+       " 'anscombe',\n",
+       " 'attention',\n",
+       " 'brain_networks',\n",
+       " 'car_crashes',\n",
+       " 'diamonds',\n",
+       " 'dots',\n",
+       " 'dowjones',\n",
+       " 'exercise',\n",
+       " 'flights',\n",
+       " 'fmri',\n",
+       " 'geyser',\n",
+       " 'glue',\n",
+       " 'healthexp',\n",
+       " 'iris',\n",
+       " 'mpg',\n",
+       " 'penguins',\n",
+       " 'planets',\n",
+       " 'seaice',\n",
+       " 'taxis',\n",
+       " 'tips',\n",
+       " 'titanic']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#sns.get_dataset_names()"
+    "sns.get_dataset_names()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 3,
    "id": "b15bc10f",
    "metadata": {},
    "outputs": [],
@@ -116,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "e6a3beb2",
    "metadata": {},
    "outputs": [
@@ -275,7 +307,7 @@
        "4  Third    man        True  NaN  Southampton    no   True  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 5,
    "id": "8822cb97",
    "metadata": {
     "scrolled": true
@@ -565,7 +597,7 @@
        "[891 rows x 15 columns]"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 6,
    "id": "fd5f15b8",
    "metadata": {},
    "outputs": [
@@ -740,7 +772,7 @@
        "4    man        True  NaN  Southampton    no   True  "
       ]
      },
-     "execution_count": 172,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 7,
    "id": "92aa9821",
    "metadata": {},
    "outputs": [
@@ -904,7 +936,7 @@
        "890    man        True  NaN   Queenstown    no   True  "
       ]
      },
-     "execution_count": 173,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 8,
    "id": "0cbc0f1e",
    "metadata": {},
    "outputs": [
@@ -925,7 +957,7 @@
        "(891, 15)"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 9,
    "id": "f10f6f51",
    "metadata": {},
    "outputs": [
@@ -957,7 +989,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 10,
    "id": "ae8515a8",
    "metadata": {},
    "outputs": [
@@ -1015,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 11,
    "id": "36eafb46",
    "metadata": {},
    "outputs": [
@@ -1040,7 +1072,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 12,
    "id": "94befe63",
    "metadata": {
     "scrolled": true
@@ -1177,7 +1209,7 @@
        "fare      891.0  32.204208  49.693429  0.00   7.9104  14.4542  31.0  512.3292"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 13,
    "id": "dd796efb",
    "metadata": {},
    "outputs": [
@@ -1268,7 +1300,7 @@
        "alive         891      2           no  549"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 14,
    "id": "601e92a6",
    "metadata": {},
    "outputs": [
@@ -1310,7 +1342,7 @@
        "Categories (7, object): ['A', 'B', 'C', 'D', 'E', 'F', 'G']"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1321,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 15,
    "id": "e5fd4056",
    "metadata": {},
    "outputs": [
@@ -1346,7 +1378,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1368,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 16,
    "id": "6ef07d5c",
    "metadata": {
     "scrolled": true
@@ -1380,7 +1412,7 @@
        "107"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 17,
    "id": "33f10e33",
    "metadata": {},
    "outputs": [],
@@ -1434,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 18,
    "id": "1a597d9c",
    "metadata": {},
    "outputs": [
@@ -1563,7 +1595,7 @@
        "4  Southampton   True  "
       ]
      },
-     "execution_count": 184,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1584,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 19,
    "id": "eb66a6dd",
    "metadata": {},
    "outputs": [],
@@ -1594,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 20,
    "id": "e2ae63e8",
    "metadata": {},
    "outputs": [
@@ -1604,7 +1636,7 @@
        "'Southampton'"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1615,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 21,
    "id": "731686ee",
    "metadata": {},
    "outputs": [],
@@ -1625,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 22,
    "id": "195e655d",
    "metadata": {},
    "outputs": [
@@ -1646,7 +1678,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1657,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 23,
    "id": "e54d3e0a",
    "metadata": {},
    "outputs": [],
@@ -1667,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 24,
    "id": "27e65d5b",
    "metadata": {
     "scrolled": true
@@ -1679,7 +1711,7 @@
        "(773, 11)"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1710,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 25,
    "id": "7a48901a",
    "metadata": {},
    "outputs": [],
@@ -1728,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 26,
    "id": "f56ea2aa",
    "metadata": {},
    "outputs": [],
@@ -1738,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 27,
    "id": "3262e2ea",
    "metadata": {},
    "outputs": [
@@ -1873,7 +1905,7 @@
        "4  Southampton   True  Middle age  "
       ]
      },
-     "execution_count": 193,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1884,7 +1916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 28,
    "id": "4de8fe4f",
    "metadata": {},
    "outputs": [
@@ -1894,7 +1926,7 @@
        "array(['Adult', 'Middle age', 'Seniors', 'Young'], dtype=object)"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1905,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 29,
    "id": "2777ab6f",
    "metadata": {},
    "outputs": [
@@ -1973,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 30,
    "id": "b3bb2782",
    "metadata": {},
    "outputs": [
@@ -2077,7 +2109,7 @@
        "fare      773.0  35.058996  52.442778  0.00   8.05  16.1  34.375  512.3292"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2088,7 +2120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 31,
    "id": "b1c403b2",
    "metadata": {},
    "outputs": [
@@ -2160,7 +2192,7 @@
        "Age_group     773      4        Adult  432"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2187,7 +2219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 32,
    "id": "f02c1b46",
    "metadata": {
     "scrolled": true
@@ -2238,7 +2270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 33,
    "id": "c252abe2",
    "metadata": {},
    "outputs": [
@@ -2251,7 +2283,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2262,7 +2294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 34,
    "id": "481712f8",
    "metadata": {
     "scrolled": false
@@ -2377,7 +2409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 35,
    "id": "3016172c",
    "metadata": {
     "scrolled": true
@@ -2392,7 +2424,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2403,7 +2435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 36,
    "id": "2a0b2ed6",
    "metadata": {
     "scrolled": true
@@ -2419,7 +2451,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2430,7 +2462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 37,
    "id": "cd89e002",
    "metadata": {},
    "outputs": [
@@ -2445,7 +2477,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2456,7 +2488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 38,
    "id": "b2e25f13",
    "metadata": {},
    "outputs": [
@@ -2470,7 +2502,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2489,7 +2521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 39,
    "id": "d8d0b51b",
    "metadata": {},
    "outputs": [
@@ -2544,7 +2576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 40,
    "id": "cacceab5",
    "metadata": {},
    "outputs": [
@@ -2605,7 +2637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 41,
    "id": "84286590",
    "metadata": {
     "scrolled": true
@@ -2667,7 +2699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 42,
    "id": "c19e2c76",
    "metadata": {},
    "outputs": [
@@ -2677,7 +2709,7 @@
        "Text(0.5, 1.0, 'Survived')"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2718,7 +2750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 43,
    "id": "71ed2fdf",
    "metadata": {},
    "outputs": [
@@ -2757,7 +2789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 44,
    "id": "c63e9fec",
    "metadata": {},
    "outputs": [
@@ -2797,7 +2829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 45,
    "id": "b51bf4e1",
    "metadata": {},
    "outputs": [
@@ -2812,7 +2844,7 @@
        "Name: survived, dtype: int64"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2823,7 +2855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 46,
    "id": "bd6ab472",
    "metadata": {},
    "outputs": [
@@ -2840,7 +2872,7 @@
        "Name: survived, dtype: int64"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2851,7 +2883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 47,
    "id": "404416cf",
    "metadata": {},
    "outputs": [
@@ -2868,7 +2900,7 @@
        "Name: survived, dtype: int64"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2879,7 +2911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 48,
    "id": "ac3a076a",
    "metadata": {},
    "outputs": [
@@ -2894,7 +2926,7 @@
        "Name: survived, dtype: int64"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2905,7 +2937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 49,
    "id": "6d56c9fa",
    "metadata": {},
    "outputs": [
@@ -2922,7 +2954,7 @@
        "Name: survived, dtype: int64"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2933,7 +2965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 50,
    "id": "71a878a1",
    "metadata": {},
    "outputs": [
@@ -2948,7 +2980,7 @@
        "Name: survived, dtype: int64"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2959,7 +2991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 51,
    "id": "b667afd9",
    "metadata": {},
    "outputs": [
@@ -2982,7 +3014,7 @@
        "Name: survived, dtype: int64"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2993,7 +3025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 52,
    "id": "76223245",
    "metadata": {},
    "outputs": [
@@ -3016,7 +3048,7 @@
        "Name: survived, dtype: int64"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3027,7 +3059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 53,
    "id": "72bb391d",
    "metadata": {},
    "outputs": [
@@ -3046,7 +3078,7 @@
        "Name: survived, dtype: int64"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3057,7 +3089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 54,
    "id": "80b724af",
    "metadata": {},
    "outputs": [
@@ -3121,7 +3153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 55,
    "id": "379d11b4",
    "metadata": {},
    "outputs": [
@@ -3181,7 +3213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 56,
    "id": "8f33e18d",
    "metadata": {},
    "outputs": [
@@ -3206,7 +3238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 57,
    "id": "40a06237",
    "metadata": {},
    "outputs": [
@@ -3284,7 +3316,7 @@
        "         male       45      17     44"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3298,7 +3330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 58,
    "id": "c930e316",
    "metadata": {},
    "outputs": [
@@ -3308,7 +3340,7 @@
        "<Axes: title={'center': 'Survival by Passenger Class'}, xlabel='class'>"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3330,7 +3362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 59,
    "id": "d2020585",
    "metadata": {},
    "outputs": [
