--- a/Python Basics/2.Python_K_I_V_O.ipynb
+++ b/Python Basics/2.Python_K_I_V_O.ipynb
@@ -19,30 +19,91 @@
    "source": [
     "### Keywords\n",
     "\n",
-    "There are few words reserved in python which can not be used explicitly by a user. There are a total of 36 keywords reserved in python as such."
+    "A keyword is a reserved word that has a predefined meaning and cannot be used for anything other than its intended purpose. Keywords are fundamental parts of the programming language's syntax and are integral to how the language functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0c5cade1",
    "metadata": {
     "id": "0c5cade1",
     "outputId": "cff324a8-219d-44f3-f840-1fb8f9ab0de8",
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']\n"
+     ]
+    }
+   ],
    "source": [
     "import keyword\n",
     "print(keyword.kwlist)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a69552f5",
+   "metadata": {},
+   "source": [
+    "- False: Represents the boolean value for false.\n",
+    "- None: Represents the null value.\n",
+    "- True: Represents the boolean value for true.\n",
+    "- and: A logical operator that returns True if both operands are true.\n",
+    "- as: Used to create an alias.\n",
+    "- assert: Used for debugging purposes; tests if a condition is true.\n",
+    "- async: Declares an asynchronous function.\n",
+    "- await: Used to wait for the result of an asynchronous function.\n",
+    "- break: Exits the current loop prematurely.\n",
+    "- class: Used to define a class.\n",
+    "- continue: Skips the rest of the code inside a loop for the current iteration only.\n",
+    "- def: Used to define a function.\n",
+    "- del: Deletes objects.\n",
+    "- elif: Else if condition.\n",
+    "- else: Used in conditional statements to execute a block of code if the condition is false.\n",
+    "- except: Catches exceptions in try-except blocks.\n",
+    "- finally: Used in try-except blocks to execute code regardless of whether an exception occurred or not.\n",
+    "- for: Used to create a for loop.\n",
+    "- from: Used for importing specific parts of a module.\n",
+    "- global: Declares a global variable.\n",
+    "- if: Used to make a conditional statement.\n",
+    "- import: Used to include a module.\n",
+    "- in: Checks if a value is present in a sequence.\n",
+    "- is: Tests for object identity.\n",
+    "- lambda: Creates an anonymous function.\n",
+    "- nonlocal: Declares a non-local variable.\n",
+    "- not: A logical operator that inverts the value of a boolean.\n",
+    "- or: A logical operator that returns True if at least one of the operands is true.\n",
+    "- pass: A null statement; does nothing.\n",
+    "- raise: Raises an exception.\n",
+    "- return: Exits a function and returns a value.\n",
+    "- try: Specifies exception handlers.\n",
+    "- while: Creates a while loop.\n",
+    "- with: Simplifies exception handling by encapsulating common preparation and cleanup tasks.\n",
+    "- yield: Pauses the function saving all its states and later continues from there on successive calls. Used with generators."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "715a8c46",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(keyword.kwlist)"
    ]
@@ -56,8 +117,7 @@
    "source": [
     "### Identifiers\n",
     "\n",
-    "Identifiers refer to the name given to class, object, functions variables..etc. It helps differentiating one entity from the other.\n",
-    "\n",
+    "An identifier is a name used in programming to identify variables, functions, classes, modules, or other entities in a program. Identifiers are created by the programmer to refer to these elements within the code.\n",
     "\n",
     "### Rules for writing Identifiers\n",
     "1. Identifiers must begin with a letter (a-z, A-Z) or an underscore (_).\n",
@@ -65,12 +125,13 @@
     "3. Identifier shouldn’t start with number\n",
     "4. Shouldn’t start with Special Character (@, #, %, *, ~ ,&)\n",
     "5. Identifiers are case-sensitive, meaning myVar and myvar would be treated as different identifiers.\n",
-    "6. Certain words, known as reserved words or keywords (e.g., if, else, while, class), cannot be used as identifiers.\n"
+    "6. Certain words, known as reserved words or keywords (e.g., if, else, while, class), cannot be used as identifiers.\n",
+    "7.should not give the space in between the identifier\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "56b00959",
    "metadata": {},
    "outputs": [],
@@ -80,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f9587cf4",
    "metadata": {
     "id": "f9587cf4",
@@ -101,10 +162,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9121f188",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid decimal literal (1330852181.py, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[5], line 8\u001b[1;36m\u001b[0m\n\u001b[1;33m    123value = 123\u001b[0m\n\u001b[1;37m      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid decimal literal\n"
+     ]
+    }
+   ],
    "source": [
     "# Valid identifiers\n",
     "name = \"John\"\n",
@@ -120,11 +190,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a0212297",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid decimal literal (172070472.py, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[6], line 10\u001b[1;36m\u001b[0m\n\u001b[1;33m    def 123_function():\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid decimal literal\n"
+     ]
+    }
+   ],
    "source": [
+    "# Function\n",
     "# Valid identifiers\n",
     "def print_message():\n",
     "    print(\"Hello, World!\")\n",
@@ -142,11 +222,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f3a246d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid decimal literal (122334419.py, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[7], line 9\u001b[1;36m\u001b[0m\n\u001b[1;33m    class 123Class:\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid decimal literal\n"
+     ]
+    }
+   ],
    "source": [
+    "# Class\n",
     "# Valid identifiers\n",
     "class Car:\n",
     "    def __init__(self, make, model):\n",
@@ -163,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3599d4ff",
    "metadata": {},
    "outputs": [],
@@ -175,24 +265,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ff99ce71",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import the Module\n",
-    "import Python_K_I_V_O\n",
-    "\n",
-    "# Using the Module's function\n",
-    "Python_K_I_V_O.greet(\"Alice\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "496259ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid decimal literal (2129934701.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[9], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    import 123_model\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid decimal literal\n"
+     ]
+    }
+   ],
    "source": [
     "# Invalid Module\n",
     "import 123_model\n",
@@ -202,10 +287,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8cb9636a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID of x:  140732314110680\n"
+     ]
+    }
+   ],
    "source": [
     "x = 10\n",
     "print(\"ID of x: \",id(x))"
@@ -219,29 +312,43 @@
    },
    "source": [
     "### Variables\n",
-    "A variable is a memory location allocated to store data. Both variable and identifier are names allotted by user to some entity in program. But identifier is just to identify different entities in program while execution whereas variable is a memory space allotted.\n",
     "\n",
-    "- All variables are a kind of identifiers but the vice versa can not be said\n",
-    "- Rules for identifiers apply to the variables as well."
+    "A variable is a storage location identified by a name that holds data which can be used and manipulated throughout a program. Variables act as containers for storing values, such as numbers, strings, or more complex data structures.\n",
+    "\n",
+    "**Naming Rules:**\n",
+    "\n",
+    "- Variable names should start with a letter (A-Z or a-z) or an underscore (_).\n",
+    "- The rest of the name can include letters, digits (0-9), and underscores.\n",
+    "- Variable names are usually case-sensitive, meaning Variable, variable, and VARIABLE would be considered different variables.\n",
+    "\n",
+    "**Types of Values:**\n",
+    "\n",
+    "- Variables can hold different types of data, including:\n",
+    "- Integers: Whole numbers, e.g., 42\n",
+    "- Floats: Decimal numbers, e.g., 3.14\n",
+    "- Strings: Text, e.g., \"Hello\"\n",
+    "- Booleans: True or false values, e.g., True\n",
+    "- Lists: Ordered collections of items, e.g., [1, 2, 3]\n",
+    "- Dictionaries: Key-value pairs, e.g., {\"name\": \"Alice\", \"age\": 25}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "14a7d964",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Variable Assignment\n",
-    "x = 10\n",
+    "x = 3.14\n",
     "name = \"John\"\n",
-    "pi = 3.14\n",
-    "is_student =True"
+    "pi = 10\n",
+    "is_student = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "7fd5eed5",
    "metadata": {},
    "outputs": [],
@@ -253,10 +360,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "316ff4e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(x) #finding the type of the variable\n",
+    "x = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "ebbd90d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'str'>\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the type of a variable\n",
     "print(type(x))\n",
@@ -266,10 +394,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f32d8a9f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "new value\n"
+     ]
+    }
+   ],
    "source": [
     "x = 5\n",
     "print(x)\n",
@@ -280,10 +417,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "07795520",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID of : 140732314110680\n",
+      "ID of : 2419272472752\n",
+      "Storage size of :  28 bytes\n",
+      "Storage size of :  54 bytes\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "\n",
@@ -291,40 +439,73 @@
     "Q = \"Hello, World!\"\n",
     "S = [1,2,3,4,5]\n",
     "\n",
-    "print(\"ID of x:\", id(x))\n",
-    "print(\"Storage size of x: \", sys.getsizeof(x), \"bytes\")"
+    "print(\"ID of :\", id(P)) # ID of the object\n",
+    "print(\"ID of :\", id(Q)) # ID of the object\n",
+    "print(\"Storage size of : \", sys.getsizeof(P), \"bytes\") # Size of the object\n",
+    "print(\"Storage size of : \", sys.getsizeof(Q), \"bytes\") # Size of the object"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "4405f930",
    "metadata": {
     "id": "4405f930"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Value 5 and 6 are assigned to variables a and b respectively(= is an assignment operator)\n",
     "a = 5\n",
-    "b = 'Certisured'\n",
+    "b = 5\n",
     "c =  (sys.getsizeof(b))\n",
-    "# a==b #(== has a different meaning, we will understand later)\n",
+    "a==b #(== has a different meaning, we will understand later)\n",
+    "a is b\n",
     "c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "c784f469",
    "metadata": {
     "id": "c784f469",
     "outputId": "b35512ef-2d65-45d0-c592-e3d7c82bec9f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sameer\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "shashi = 3+3\n",
     "shashi1 = \"sa\"+\"meer\"\n",
-    "shashi1"
+    "print(shashi1)\n",
+    "shashi"
    ]
   },
   {
@@ -335,7 +516,17 @@
     "id": "1313d881",
     "outputId": "75c26561-9078-4c20-e6eb-6061a76ff4dd"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a is  5\n",
+      "certisured\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "a,b,c = 5, 'certisured', 10\n",
     "#a=5\n",
@@ -348,13 +539,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "6e21f885",
    "metadata": {
     "id": "6e21f885",
     "outputId": "69a78260-579a-42f2-8c27-3082274dc5d4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "a=b=c=d=5\n",
     "print(a)\n",
@@ -385,10 +585,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e7a8c1b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'5'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s = input(\"enter a number\" )\n",
     "s"
@@ -396,16 +607,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "51331f23",
    "metadata": {
     "id": "51331f23",
     "outputId": "75bd4ff6-52b5-40aa-9ada-204c652d8ffb"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "a = int(input('Enter a number: '))\n",
-    "b = int(input('Enter a number: '))\n",
+    "b = int(input('Enter a number1: '))\n",
     "c = a + b\n",
     "print(c)\n",
     "#def add(a,b):\n",
@@ -414,13 +633,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "8edf24ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21.2\n"
+     ]
+    }
+   ],
    "source": [
     "a = float(input('Enter a number: '))\n",
-    "b = float(input('Enter a number: '))\n",
+    "b = float(input('Enter a number1: '))\n",
     "c = a + b\n",
     "print(c)\n",
     "#def add(a,b):\n",
@@ -429,13 +656,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "9bdd08e8",
    "metadata": {
     "id": "9bdd08e8",
     "outputId": "4d184b99-80a7-484e-beff-60f6db5353df"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prem kumar is a good guy\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "a =5\n",
     "b=6\n",
@@ -444,34 +680,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2ebfca80",
-   "metadata": {},
-   "source": [
-    "File Input And Output"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ee49ff68",
+   "execution_count": 24,
+   "id": "1fdd7711",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "with open(r'D:\\Python\\11.File_Handling\\file.txt', 'r') as file:\n",
-    "    content = file.read()\n",
-    "    print(content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "919ad6c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(r'D:\\Python\\11.File_Handling\\file.txt', 'w') as file:\n",
-    "    file.write('example.')"
+    "a, b =  b, a\n",
+    "print(a)"
    ]
   },
   {
@@ -1382,7 +1606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.2"
   },
   "vscode": {
    "interpreter": {
