--- a/Python Basics/7.Exception Handling.ipynb
+++ b/Python Basics/7.Exception Handling.ipynb
@@ -352,6 +352,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File not found\n",
+      "Execution complete\n"
+     ]
+    }
+   ],
+   "source": [
+    "try: \n",
+    "\n",
+    "     f = open(\"example.txt\", \"r\") \n",
+    "\n",
+    "     content = f.read()\n",
+    "\n",
+    "except FileNotFoundError: \n",
+    "\n",
+    "     print(\"File not found\") \n",
+    "\n",
+    "finally:\n",
+    "\n",
+    "    print(\"Execution complete\")  "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -536,6 +566,29 @@
     "finally:\n",
     "    # This block is always executed\n",
     "    print(\"Finally block: This code always runs.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "try: \n",
+    "    x = int(\"123a\") \n",
+    "except ValueError: \n",
+    "   x = 0 \n",
+    "finally: \n",
+    "    x = 1 \n",
+    "    print(x)  "
    ]
   }
  ],
