--- a/Python Basics/9.File_Handling/file_handle.ipynb
+++ b/Python Basics/9.File_Handling/file_handle.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## File Handling"
+    "## **File Handling**"
    ]
   },
   {
@@ -63,6 +63,36 @@
     "A file which is opened should be closed using the close() method. Once a file is opened but not closed, then the data of the file may be corrupted or deleted in some cases. Also, if the file is not closed, the memory utilized by the file is not freed, leading to problems like insufficient memory. This happens when we are working with serval files simultaneously. Hence it is mandatory to close the file.\n",
     "\n",
     "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mixed_strings = [\n",
+    "    \"test@example.com\",\n",
+    "    \"123-456-7890\",\n",
+    "    \"Start this string\",\n",
+    "    \"This string ends with End\",\n",
+    "    \"123456\",\n",
+    "    \"Contains whitespace \",\n",
+    "    \"pretest and posttest\",\n",
+    "    \"@#!$%\",\n",
+    "    \"5This does not start with a digit\",\n",
+    "    \"NoWhitespaceHere\"\n",
+    "]\n",
+    "\n",
+    "# Function to create and write to the text file\n",
+    "\n",
+    "def create_file(file_path, content):\n",
+    "    with open(file_path, 'w') as file:\n",
+    "        for line in content:\n",
+    "            file.write(line + '\\n')\n",
+    "\n",
+    "file_path = 'mixed_strings.txt'\n",
+    "create_file(file_path, mixed_strings)"
    ]
   },
   {
@@ -542,6 +572,49 @@
     "\twith open('out.txt', 'w') as f1:\n",
     "\t\tfor line in f:\n",
     "\t\t\tf1.write(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current content of the file:\n",
+      "I am a learner\n",
+      "Python is easy to learn\n",
+      "\n",
+      "Updated content of the file:\n",
+      "This is the new content.\n",
+      "easy to learn\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Open the file in r+ mode\n",
+    "with open('sample.txt', 'r+') as file:\n",
+    "    # Read the current content of the file\n",
+    "    content = file.read()\n",
+    "    print(\"Current content of the file:\")\n",
+    "    print(content)\n",
+    "\n",
+    "    # Move the file pointer to the beginning of the file\n",
+    "    file.seek(0)\n",
+    "\n",
+    "    # Write new content to the file\n",
+    "    file.write(\"This is the new content.\\n\")\n",
+    "\n",
+    "    # Move the file pointer to the beginning again\n",
+    "    file.seek(0)\n",
+    "\n",
+    "    # Read the updated content of the file\n",
+    "    updated_content = file.read()\n",
+    "    print(\"Updated content of the file:\")\n",
+    "    print(updated_content)\n"
    ]
   }
  ],
